# waynestalk

./: .gitignore  LICENSE
AndroidBooksProvider/: settings.gradle
AndroidBooksProviderClient/: settings.gradle
AndroidBoundServiceClientExample/: settings.gradle
AndroidBoundServiceExample/: settings.gradle
AndroidBroadcastReceiverExample/: settings.gradle
AndroidContactExample/: settings.gradle
AndroidContactIntentExample/: settings.gradle
AndroidCoroutineRetrofitExample/: settings.gradle
AndroidDetectBackgroundForeground/: settings.gradle
AndroidDokkaExample/: build.gradle  settings.gradle
AndroidECDSAExample/: settings.gradle.kts
AndroidFCMExample/: build.gradle  settings.gradle
AndroidFontExample/: settings.gradle
AndroidGooglePayExample/: settings.gradle.kts
AndroidHiltExample/: build.gradle  settings.gradle
AndroidRecyclerViewExample/: settings.gradle
AndroidRecyclerViewMultipleItemsExample/: settings.gradle
AndroidRoomExample/: settings.gradle
AndroidServiceExample/: settings.gradle
AndroidYOLOv8ONNXExample/: settings.gradle.kts
AndroidYOLOv8TorchScriptExample/: settings.gradle.kts
AppWidgetExample/: settings.gradle
AttentionModel/: bahdanau_attention.py  example.py  luong_attention.py
BERT/: bert.py
CoT/: l2m.py  pal.py  pyproject.toml  question.py  ruff.toml  tot.py  (+2 more)
LoRA/: pyproject.toml
LoRA/data/raw/: corpus.txt
LoRA/example/: config.py  dapt-train.py  fetch_corpus.py  inference.py  merge_q_lora.py
LoRA/lora/: lora.py
VisionTransformer/: pyproject.toml
VisionTransformer/vit_example/: example.py  vit.py
(+862 files in other folders)
