[project]
name = "lora"
version = "0.1.0"
description = ""
authors = [
    {name = "Wayne Huang",email = "xhhuango@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "peft (>=0.15.2,<0.16.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "bitsandbytes (>=0.45.5,<0.46.0)",
    "safetensors (>=0.5.3,<0.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
